--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ">
 
 <head>
-    <title>Hritik Jaiswal</title>
+    <title>Harikrishnan K</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -63,7 +63,7 @@
                 <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
                     <div class="text text-center">
                         <span class="subheading">Hey! I am</span>
-                        <h1>Hritik Jaiswal</h1>
+                        <h1>Harikrishnan K</h1>
                         <h2>I love to do
                             <span class="txt-rotate" data-period="2000" data-rotate='[ "Full stack development.", "ML & AI .", "Native mobile app development.", "Robotics and Computer vision" ]'></span>
                         </h2>
@@ -95,16 +95,16 @@
                         <div class="col-md-12 heading-section ftco-animate">
                             <!-- <h1 class="big">About</h1> -->
                             <h2 class="mb-4">About Me</h2>
-                            <p>I'm Undergraduate IT Student at kj somaiya college of engineering practical and versatile IT student with significant experience collaborating on the troubleshooting process, working on different project Seeking for a position
+                            <p>I'm Data Analytics Student at Indian Institute of Infrastructure and Construction with significant experience collaborating on the troubleshooting process, working on different project Seeking for a position
                                 that will utilize my skills and experience.</p>
                             <ul class="about-info mt-4 px-md-0 px-2">
-                                <li class="d-flex"><span>Name:</span> <span>Hritik Jaiswal</span></li>
-                                <li class="d-flex"><span>Date of birth:</span> <span>May 31, 2000</span></li>
-                                <li class="d-flex"><span>Address:</span> <span>1/314 , Swarajya CHSL , Dadar (west) ,
-                                        Mumbai </span></li>
+                                <li class="d-flex"><span>Name:</span> <span>Harikrishnan K</span></li>
+                                <li class="d-flex"><span>Date of birth:</span> <span>October 25, 1993</span></li>
+                                <li class="d-flex"><span>Address:</span> <span>Chethiyattu Parambil House , Peruvaram West , North Paravur ,
+                                        Ernakulam </span></li>
                                 <li class="d-flex"><span>Zip code:</span> <span>400013</span></li>
-                                <li class="d-flex"><span>Email:</span> <span>hritik.jaiswal@somaiya.edu</span></li>
-                                <li class="d-flex"><span>Phone: </span> <span>7303412313</span></li>
+                                <li class="d-flex"><span>Email:</span> <span>harikrishnank368@gmail.com</span></li>
+                                <li class="d-flex"><span>Phone: </span> <span>7994181715</span></li>
                             </ul>
                         </div>
                     </div>
