--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <li class="d-flex"><span>Date of birth:</span> <span>October 25, 1993</span></li>
                                 <li class="d-flex"><span>Address:</span> <span>Chethiyattu Parambil House , Peruvaram West , North Paravur ,
                                         Ernakulam </span></li>
-                                <li class="d-flex"><span>Zip code:</span> <span>400013</span></li>
+                                <li class="d-flex"><span>Zip code:</span> <span>683513</span></li>
                                 <li class="d-flex"><span>Email:</span> <span>harikrishnank368@gmail.com</span></li>
                                 <li class="d-flex"><span>Phone: </span> <span>7994181715</span></li>
                             </ul>
@@ -144,10 +144,10 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2010-2015</span>
+                                <span class="date">2010</span>
                                 <h2>Secondary School Certificate (SSC)</h2>
-                                <span class="position">Guru nanak high school</span>
-                                <p>Percentage : 89%</p>
+                                <span class="position">St. John the Baptist C.S.I. English Medium High School,Aluva</span>
+                                <p>Percentage : 66%</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -155,10 +155,10 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2015-2017</span>
+                                <span class="date">2010-2012</span>
                                 <h2>Higher Secondary Certificate (HSC)</h2>
-                                <span class="position">Kishinchand Chellaram (K.C) College</span>
-                                <p>Percentage : 82%</p>
+                                <span class="position">Vidhyadhiraja Vidhya Bhavan Higher Secondary School,Aluva</span>
+                                <p>Percentage : 70%</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -166,12 +166,23 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2017-present</span>
-                                <h2>Information technology</h2>
-                                <span class="position">K.J Somaiya college of engineering </span>
-                                <p>CGPA : 8.12</p>
+                                <span class="date">2013-2017</span>
+                                <h2>B.Tech in Computer Science & Engineering</h2>
+                                <span class="position">Sree Narayana Guru Institute of Science & Technology,N.Paravur </span>
+                                <p>CGPA : 5.8</p>
                             </div>
                         </div>
+                        <div class="resume-wrap d-flex ftco-animate">
+                            <div class="icon d-flex align-items-center justify-content-center">
+                                <span class="flaticon-ideas"></span>
+                            </div>
+                            <div class="text pl-3">
+                                <span class="date">2019-Present</span>
+                                <h2>PG Diploma in Data Analytics</h2>
+                                <span class="position">Indian Institute of Infrastructure & Construction,Chavara</span>
+                               
+                            </div>
+                        </div>	            
 
                     </div>
                     <!-- start part 2  -->
