--- a/index.html
+++ b/index.html
@@ -356,9 +356,9 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2016-2017</span>
-                                <h2>Simulation</h2>
-                                <span class="position">Real time simulation of 3 wheel drive using MATLAB</span>
-                                <p>Simulink is a simulation and model-based design environment for dynamic and embedded systems, integrated with MATLAB.</p>
+                                <h2>News Aggregator App</h2>
+                                <span class="position">News Aggregation  using Django</span>
+                                <p>News Aggregator App is a Web Application Aggregates News articles from multiple websites</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -367,9 +367,9 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2017-2018</span>
-                                <h2>Computer vision</h2>
-                                <span class="position">Color detection and Tracking using Opencv</span>
-                                <p>Detect a object and Track the object at each frame of the video , </p>
+                                <h2>HEALTH CARE SYSTEM</h2>
+                                <span class="position">Health Care System using ODOO</span>
+                                <p>A Health Care Management System For Monitoring Clients Health Status </p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -378,9 +378,9 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2018-2019</span>
-                                <h2>Machine learning</h2>
-                                <span class="position">Sentimental analysis using Machine learning</span>
-                                <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
+                                <h2>BLOGGER APP</h2>
+                                <span class="position">Web Application Using Django</span>
+                                <p>A Web Application for Users to Publish articles</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -389,9 +389,9 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2018-present</span>
-                                <h2>Web development</h2>
-                                <span class="position">Create a Multi-functionality Collaborative Environment.</span>
-                                <p>Would provide a very good opportunity for freelancers to take up short term projects and would also help students to test their practical concepts by working on a real-life project.</p>
+                                <h2>MOBILE OPPORTUNISTIC NETWORK</h2>
+                                <span class="position">Location Based Application Using PHP & ANDROID</span>
+                                <p>Mobile Opportunistic Network is an application for Location Based A.</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
@@ -400,9 +400,9 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">2019-present</span>
-                                <h2>Native mobile app development using Flutter</h2>
-                                <span class="position">Tik Tok app</span>
-                                <p>Flutter application - TikTok clone app added Home page ,Profile & Login Page and Register Page</p>
+                                <h2>Library Management System</h2>
+                                <span class="position">Web Application Using PHP & Mysql</span>
+                                <p>Software for Monitoring and Controlling The  Transactions in a Library</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
