--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2016-2017</span>
+                                <span class="date">FEB 2020 - APR 2020</span>
                                 <h2>News Aggregator App</h2>
                                 <span class="position">News Aggregation  using Django</span>
                                 <p>News Aggregator App is a Web Application Aggregates News articles from multiple websites</p>
@@ -366,7 +366,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2017-2018</span>
+                                <span class="date">MAR 2019 - JULY 2019</span>
                                 <h2>HEALTH CARE SYSTEM</h2>
                                 <span class="position">Health Care System using ODOO</span>
                                 <p>A Health Care Management System For Monitoring Clients Health Status </p>
@@ -377,7 +377,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2018-2019</span>
+                                <span class="date">SEP 2017 - NOV 2017</span>
                                 <h2>BLOGGER APP</h2>
                                 <span class="position">Web Application Using Django</span>
                                 <p>A Web Application for Users to Publish articles</p>
@@ -388,7 +388,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2018-present</span>
+                                <span class="date">OCTOBER 2016 - FEB 2017</span>
                                 <h2>MOBILE OPPORTUNISTIC NETWORK</h2>
                                 <span class="position">Location Based Application Using PHP & ANDROID</span>
                                 <p>Mobile Opportunistic Network is an application for Location Based A.</p>
@@ -399,7 +399,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2019-present</span>
+                                <span class="date">JAN 2016 - MAR 2016</span>
                                 <h2>Library Management System</h2>
                                 <span class="position">Web Application Using PHP & Mysql</span>
                                 <p>Software for Monitoring and Controlling The  Transactions in a Library</p>
