--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Address</h3>
-                            <p>1/314 , Swarajya CHSL , Dadar(West) , Mumbai-400013</p>
+                            <p>Chethiyattu Parambil House , Peruvaram West , North Paravur , Ernakulam-683513</p>
                         </div>
                     </div>
                 </div>
@@ -665,7 +665,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Contact Number</h3>
-                            <p><a href="tel://7303412313">+ 7303412313</a></p>
+                            <p><a href="tel://7994181715">+ 7994181715</a></p>
                         </div>
                     </div>
                 </div>
@@ -676,7 +676,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Email Address</h3>
-                            <p><a class="auto-generated-link" data-auto-recognition="true" data-type="mail" data-content="hritik.jaiswal@somaiya.edu" href="mailto:hritik.jaiswal@somaiya.edu">hritik.jaiswal@somaiya.edu</a></p>
+                            <p><a class="auto-generated-link" data-auto-recognition="true" data-type="mail" data-content="hritik.jaiswal@somaiya.edu" href="mailto:harikrishnank368@gmail.com">harikrishnank368@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -687,7 +687,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Website</h3>
-                            <p><a href="https://hritik5102.github.io/">https://hritik5102.github.io/</a></p>
+                            <p><a href="https://harikrishnank-git.github.io/">https://hritik5102.github.io/</a></p>
                         </div>
                     </div>
                 </div>
@@ -718,7 +718,7 @@
                 </div>
 
                 <div class="col-md-6 d-flex">
-                    <div class="img" style="background-image: url(images/Hritik.JPG);"></div>
+                    <div class="img" style="background-image: url(images/hari.JPG);"></div>
                 </div>
             </div>
         </div>
@@ -731,17 +731,17 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">About</h2>
-                        <p>I'm Undergraduate IT student at kj somaiya college of engineering practical & Technical team member at <a style="color: #3e64ff;" href="https://kjscerobocon.tech/">Team Kjsce
-                                Robocon</a></p>
+                        <p>I'm Post graduate Diploma student at  <a style="color: #3e64ff;" href="https://www.iiic.ac.in/">Team Kjsce
+                                Indian Institute of Infrastructure & Construction </a></p>
 
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                            <li class="ftco-animate"><a href="https://github.com/hritik5102" target="_blank"><span
+                            <li class="ftco-animate"><a href="https://github.com/harikrishnank-git" target="_blank"><span
                                         class="icon-github"></span></a></li>
-                            <li class="ftco-animate"><a href="https://twitter.com/HritikJ71241501" target="_blank"><span
+                            <li class="ftco-animate"><a href="https://twitter.com/_harikrishnank" target="_blank"><span
                                         class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/hritik-jaiswal-22a136166/" target="_blank"><span class="icon-linkedin"></span></a></li>
+                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/harikrishnan-k/" target="_blank"><span class="icon-linkedin"></span></a></li>
                             <li class="ftco-animate"><a href="https://stackoverflow.com/users/11890231/hritik-jaiswal" target="_blank"><span class="icon-stack-overflow"></span></a></li>
-                            <li class="ftco-animate"><a href="https://medium.com/@hritik.jaiswal" target="_blank"><span
+                            <li class="ftco-animate"><a href="https://medium.com/@harikrishnank368" target="_blank"><span
                                         class="icon-medium"></span></a></li>
                             <!-- <li class="ftco-animate"><a href="https://gitlab.com/hritik5102" target="_blank" ><span class="icon-gitlab"></span></a></li> -->
 
@@ -769,13 +769,13 @@
                         <h2 class="ftco-heading-2">Have a Questions?</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">1/314 , Swarajya CHSL ,
-                                        Dadar(West) , Mumbai-400013</span></li>
+                                <li><span class="icon icon-map-marker"></span><span class="text">Chethiyattu Parambil House , Peruvaram West ,
+                                        North Paravur , Ernakulam-683513</span></li>
                                 <li><a href="#"><span class="icon icon-phone"></span><span
-                                            class="text">7303412313</span></a></li>
-                                <li><a class="auto-generated-link" data-auto-recognition="true" data-type="mail" href="mailto:hritik.jaiswal@somaiya.edu" data-content="hritik.jaiswal@somaiya.edu"><span
+                                            class="text">7994181715</span></a></li>
+                                <li><a class="auto-generated-link" data-auto-recognition="true" data-type="mail" href="mailto:harikrishnank368@gmail.com" data-content="harikrishnank368@gmail.com"><span
                                             class="icon icon-envelope"></span><span
-                                            class="text">hritik.jaiswal@somaiya.edu</span></a></li>
+                                            class="text">harikrishnank368@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
