--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
                 </div>
 
                 <div class="col-md-6 d-flex">
-                    <div class="img" style="background-image: url(images/hari.JPG);"></div>
+                    <div class="img" style="background-image: url(images/hari.jpg);"></div>
                 </div>
             </div>
         </div>
