--- a/index.html
+++ b/index.html
@@ -422,109 +422,38 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">September - 2018</span>
-                                <h2>Abhiyantriki - 2018</h2>
-                                <span class="position">2nd prize in Amaze impossible.</span>
-                                <p>Organized by IETE KJSCE </p>
+                                <span class="date">March - 2017</span>
+                                <h2>SNGIST - 2017</h2>
+                                <span class="position">Best Academic Main Project in Computer Science Batch 2013-17.</span>
+                                <p>Organized by SNGIST </p>
                             </div>
                         </div>
+
 
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">Dec - 2018</span>
-                                <h2>Technical paper presentation</h2>
-                                <span class="position">2nd prize in technical paper presentation</span>
-                                <p>Organized by ISTE Prakalpa 2019.</p>
+                                <span class="date">June-2017 to Sept-2017</span>
+                                <h2>Quest Innovative Solutions</h2>
+                                <span class="position">Certification of Python developement Internship at Quest Innovative Solutions.</span>
+                                <p>Blog App is part of Internship project</p>
                             </div>
                         </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
+			 <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">2018-2019</span>
-                                <h2>ABU - Robocon</h2>
-                                <span class="position">Secured AIR-#5 in DD-Robocon 2019</span>
-                                <p>Team KJSCE Robocon secured AIR-5 in ABU Robocon held at IIT DELHI</p>
+                                <span class="date">October-2012 to Sept-2013</span>
+                                <h2>NIIT</h2>
+                                <span class="position">Certification of Java developement Internship at NIIT.</span>
+                               
                             </div>
                         </div>
 
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">2018-2019</span>
-                                <h2>Abhiyantriki - 2019</h2>
-                                <span class="position">2nd prize in Bit rebels</span>
-                                <p>Cybersecurity competition hosted by CSI KJSCE</p>
-                            </div>
-                        </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">October - 2019</span>
-                                <h2>KJSCE Hack</h2>
-                                <span class="position">Certificate of appreciation.</span>
-                                <p>Hackathon is a part of KJSCE’s annual tech fest, Abhiyantriki Organized by KJSCE codecell
-                                </p>
-                            </div>
-                        </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">May-2019 to august-2019</span>
-                                <h2>SDC - KJSCE</h2>
-                                <span class="position">Certification of Web developement Internship at SDC KJSCE.</span>
-                                <p>Feedback System is part of Internship project</p>
-                            </div>
-                        </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">February-2020</span>
-                                <h2>Technext 2020 </h2>
-                                <span class="position">2nd prize in Hackit 2.0</span>
-                                <p>Hackathon organized by CSI KJSCE</p>
-                            </div>
-                        </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">March-2020</span>
-                                <h2>Codeshastra 6.0</h2>
-                                <span class="position">Certificate of appreciation in hackathon.</span>
-                                <p>Hackathon organized by D.J sanghavi college of engineering(DJSCE)</p>
-                            </div>
-                        </div>
-
-                        <div class="resume-wrap d-flex ftco-animate">
-                            <div class="icon d-flex align-items-center justify-content-center">
-                                <span class="flaticon-ideas"></span>
-                            </div>
-                            <div class="text pl-3">
-                                <span class="date">March-2020</span>
-                                <h2>Ennovate'20</h2>
-                                <span class="position">Certificate of appreciation for being top 7 finallist in techno-business event.</span>
-                                <p>Organized by Bloombox KJSCE</p>
-                            </div>
-                        </div>
+                        
 
 
                     </div>
