--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                         </div>
                         <div>
                             <h3 class="mb-4">Website</h3>
-                            <p><a href="https://harikrishnank-git.github.io/">https://hritik5102.github.io/</a></p>
+                            <p><a href="https://iamharikrishnank.github.io/">https://iamharikrishnank.github.io/</a></p>
                         </div>
                     </div>
                 </div>
