--- a/index.html
+++ b/index.html
@@ -128,13 +128,15 @@
                     <nav id="navi">
                         <ul>
                             <li><a href="#page-1">Education</a></li>
-                            <li><a href="#page-2">Skills</a></li>
-                            <li><a href="#page-3">Personal-projects</a></li>
-                            <li><a href="#page-4">Awards</a></li>
+			    <li><a href="#page-2">Experience</a></li>
+                            <li><a href="#page-3">Skills</a></li>
+                            <li><a href="#page-4">Personal-projects</a></li>
+                            <li><a href="#page-5">Awards</a></li>
                             <li><a href="#page-5">Language</a></li>
                         </ul>
                     </nav>
                 </div>
+		
                 <!-- start of part-1 -->
                 <div class="col-md-9">
                     <div id="page-1" class="page one">
@@ -189,8 +191,24 @@
                      	            
 
                     </div>
-                    <!-- start part 2  -->
-                    <div id="page-2" class="page three">
+			
+		   <div id="page-2" class= "page two">
+					  	<h2 class="heading">Experience</h2>
+					    <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">July 2018-September 2019</span>
+		    					<h2>Programmer Analyst</h2>
+		    					<span class="position">Exelixir Analytics Private Limited,Kochi</span>
+		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    				</div>
+	    				</div>
+	    				
+	    				</div>
+                    <!-- start part 3  -->
+                    <div id="page-3" class="page three">
                         <h2 class="heading">Skills</h2>
                         <div class="row progress-circle mb-5">
                             <div class="col-lg-4 mb-4">
@@ -352,7 +370,7 @@
 
 
                     <!-- start of part -3 -->
-                    <div id="page-3" class="page two">
+                    <div id="page-4" class="page four">
                         <h2 class="heading">Personal projects</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
@@ -414,7 +432,7 @@
 
                     <!-- end of part - 3  -->
                     <!-- start of part - 4  -->
-                    <div id="page-4" class="page four">
+                    <div id="page-5" class="page five">
                         <h2 class="heading">Awards</h2>
 
                         <div class="resume-wrap d-flex ftco-animate">
