--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <li><a href="#page-1">Education</a></li>
 			    <li><a href="#page-2">Experience</a></li>
                             <li><a href="#page-3">Skills</a></li>
-                            <li><a href="#page-4">Personal-projects</a></li>
+                            <li><a href="#page-4">Projects</a></li>
                             <li><a href="#page-5">Awards</a></li>
                             <li><a href="#page-5">Language</a></li>
                         </ul>
