--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
                             <div class="col-lg-4 mb-4">
                                 <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">Hindi</h2>
+                                    <h2 class="h5 font-weight-bold text-center mb-4">Malayalam</h2>
 
                                     <!-- Progress bar 1 -->
                                     <div class="progress mx-auto" data-value="80">
@@ -550,10 +550,10 @@
 
                             <div class="col-lg-4 mb-4">
                                 <div class="bg-white rounded-lg shadow p-4">
-                                    <h2 class="h5 font-weight-bold text-center mb-4">Marathi</h2>
+                                    <h2 class="h5 font-weight-bold text-center mb-4">Hindi</h2>
 
                                     <!-- Progress bar 1 -->
-                                    <div class="progress mx-auto" data-value="75">
+                                    <div class="progress mx-auto" data-value="50">
                                         <span class="progress-left">
                                             <span class="progress-bar border-primary"></span>
                                         </span>
