--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
                         <div class="row">
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>Tensorflow</h3>
+                                    <h3>Hadoop</h3>
                                     <div class="progress">
                                         <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                            <span>60%</span>
+                                            <span>50%</span>
                                         </div>
                                     </div>
                                 </div>
@@ -360,17 +360,47 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 animate-box">
+                           
+		        <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
-                                    <h3>Data Mining </h3>
+                                    <h3>MongoDB</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-6" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                            <span>80%</span>
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>40%</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+		      <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Django</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>60%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+		     <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>ODOO</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>70%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+		     <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Pentaho Data Integration(Kettle)</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>60%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
 
 
