--- a/index.html
+++ b/index.html
@@ -340,6 +340,16 @@
                                     </div>
                                 </div>
                             </div>
+			    <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>XML</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>70%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>SQL </h3>
@@ -375,7 +385,7 @@
                                 <div class="progress-wrap ftco-animate">
                                     <h3>Django</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                             <span>60%</span>
                                         </div>
                                     </div>
@@ -395,7 +405,7 @@
                                 <div class="progress-wrap ftco-animate">
                                     <h3>Pentaho Data Integration(Kettle)</h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                             <span>60%</span>
                                         </div>
                                     </div>
@@ -406,7 +416,7 @@
 
                     <!-- start of part -3 -->
                     <div id="page-4" class="page four">
-                        <h2 class="heading">Personal projects</h2>
+                        <h2 class="heading">Projects</h2>
                         <div class="resume-wrap d-flex ftco-animate">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <span class="flaticon-ideas"></span>
