--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span class="subheading">Hey! I am</span>
                         <h1>Harikrishnan K</h1>
                         <h2>I love to do
-                            <span class="txt-rotate" data-period="2000" data-rotate='[ "ODOO  development.", "ML & AI .", "Big Data.", "Data Mining" ]'></span>
+                            <span class="txt-rotate" data-period="2000" data-rotate='[ "Web  development.", "ML & AI .", "Big Data.", "Data Mining" ]'></span>
                         </h2>
                     </div>
                 </div>
@@ -354,22 +354,13 @@
                                 <div class="progress-wrap ftco-animate">
                                     <h3>SQL </h3>
                                     <div class="progress">
-                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                        <div class="progress-bar color-4" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                             <span>70%</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 animate-box">
-                                <div class="progress-wrap ftco-animate">
-                                    <h3>Excel</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                            <span>70%</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                            
 		        <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
@@ -380,7 +371,17 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                        </div>
+			<div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Excel</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-5" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span>70%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
 	   		<div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>Pentaho Data Integration(Kettle)</h3>
@@ -400,7 +401,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                     </div>
 		     <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>ODOO</h3>
