--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <span class="subheading">Hey! I am</span>
                         <h1>Harikrishnan K</h1>
                         <h2>I love to do
-                            <span class="txt-rotate" data-period="2000" data-rotate='[ "Web  development.", "ML & AI .", "Big Data.", "Data Mining" ]'></span>
+                            <span class="txt-rotate" data-period="2000" data-rotate='[ "Web  development.", "ML & AI .", "Data Analytics.", "Data Mining" ]'></span>
                         </h2>
                     </div>
                 </div>
