--- a/index.html
+++ b/index.html
@@ -310,26 +310,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 animate-box">
-                                <div class="progress-wrap ftco-animate">
-                                    <h3>Hadoop</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                            <span>50%</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6 animate-box">
-                                <div class="progress-wrap ftco-animate">
-                                    <h3>Tableau</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar color-2" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:95%">
-                                            <span>75%</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                             <div class="col-md-6 animate-box">
                                 <div class="progress-wrap ftco-animate">
                                     <h3>HTML5</h3>
@@ -414,6 +395,26 @@
                                     </div>
                                 </div>
                             </div>
+		    <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Hadoop</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-1" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                            <span>50%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 animate-box">
+                                <div class="progress-wrap ftco-animate">
+                                    <h3>Tableau</h3>
+                                    <div class="progress">
+                                        <div class="progress-bar color-2" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:95%">
+                                            <span>75%</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 		     
                     </div>
 
@@ -462,7 +463,7 @@
                                 <span class="date">OCTOBER 2016 - FEB 2017</span>
                                 <h2>MOBILE OPPORTUNISTIC NETWORK</h2>
                                 <span class="position">Location Based Application Using PHP & ANDROID</span>
-                                <p>Mobile Opportunistic Network is an application for Location Based A.</p>
+                                <p>Mobile Opportunistic Network is an application for Location Based App.</p>
                             </div>
                         </div>
                         <div class="resume-wrap d-flex ftco-animate">
