--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">March - 2017</span>
-                                <h2>SNGIST - 2017</h2>
+                                <h2>VEGA - 2017</h2>
                                 <span class="position">Best Academic Main Project in Computer Science Batch 2013-17.</span>
                                 <p>Organized by SNGIST </p>
                             </div>
@@ -515,8 +515,8 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">October-2012 to Sept-2013</span>
-                                <h2>NIIT</h2>
-                                <span class="position">Certification of Java developement Internship at NIIT.</span>
+                                <h2>DJVT-NIIT</h2>
+                                <span class="position">Certification of Java development  at NIIT.</span>
                                
                             </div>
                         </div>
