--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                             </div>
                             <div class="text pl-3">
                                 <span class="date">June-2017 to Sept-2017</span>
-                                <h2>Quest Innovative Solutions</h2>
+                                <h2>Certified Software Developer-Python</h2>
                                 <span class="position">Certification of Python developement Internship at Quest Innovative Solutions.</span>
                                 <p>Blog App is part of Internship project</p>
                             </div>
