--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                                         class="icon-github"></span></a></li>
                             <li class="ftco-animate"><a href="https://twitter.com/_harikrishnank" target="_blank"><span
                                         class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/harikrishnan-k/" target="_blank"><span class="icon-linkedin"></span></a></li>
+                            <li class="ftco-animate"><a href="https://www.linkedin.com/in/iamharikrishnank/" target="_blank"><span class="icon-linkedin"></span></a></li>
                           
                             <li class="ftco-animate"><a href="https://medium.com/@harikrishnank368" target="_blank"><span
                                         class="icon-medium"></span></a></li>
